added nav links and more css elements to webpage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Omari's Porfoilio</title>
+        <title>Omari's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -15,15 +15,9 @@
            <h1>OMARI GRAMPUS</h1>
            <nav>
                <ul>
-                   <li>
-                       About Me
-                   </li>
-                   <li>
-                       Work
-                   </li>
-                   <li>
-                       Contact Me
-                   </li>
+                   <li><a href="#">About Me</a></li>
+                   <li><a href="#">Work</a></li>
+                   <li><a href="#">Contact Me</a></li>
                </ul> 
            </nav>
        </header>
@@ -45,10 +39,23 @@
             </section>
            </section>
        </main>
-       <footer>
+       <footer class="footer-contact">
            <h3>
                CONTACT ME
            </h3>
+           <nav>
+               <ul>
+                   <li>
+                       Email
+                   </li>
+                   <li>
+                       Linkedin
+                   </li>
+                   <li>
+                       Phone
+                   </li>
+               </ul>
+           </nav>
 
        </footer>
     
