added final links for html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
            <h1>OMARI GRAMPUS</h1>
            <nav>
                <ul>
-                   <li><a href="#">About Me</a></li>
-                   <li><a href="#">Work</a></li>
-                   <li><a href="#">Contact Me</a></li>
+                   <li><a href="#About Me">About Me</a></li>
+                   <li><a href="#Work">Work</a></li>
+                   <li><a href="#Contact Me">Contact Me</a></li>
                </ul> 
            </nav>
        </header>
@@ -27,19 +27,25 @@
        <main>
            <section class="sections">
                <img src="imgs/84081FFA-0A1F-4800-B394-DD2D37D1DDB1_1_105_c.jpeg" alt="Picture of Omari" class="float" />
+               <span id= "About Me">
                <h2>ABOUT ME</h2>
                <p>
                    I am a upcoming software developer, who stated self teaching myself Python during the beginning of COVID. I took a real intrest to it, wanted to further my skill set and advance myself into a new career. Ive always have had an intest in
                    technology and computers and beilieve becoming a developer would be a great fit for me. I am from Rockland County, New York, but now reside in Sandy Springs, GA. I enjopy Playing sports, working out, writing music and making music. I have
                    a willingness to learn and one day with much practice and commitment be able to create phenominal apps and webistes for all to use. 
                </p>
+               </span>
            </section>
            <section class="sections">
-               <h2>WORK</h2>
+               <span id="Work">
+                <h2>WORK</h2>
+               <p> Check out my scratch game I created! <a href="https://scratch.mit.edu/projects/474156972">Scratch Game</a> </p>
+            </span>
             </section>
            </section>
        </main>
        <footer class="footer-contact">
+           <span id="Contact Me">
            <h3>
                CONTACT ME
            </h3>
@@ -56,7 +62,7 @@
                    </li>
                </ul>
            </nav>
-
+            </span>
        </footer>
     
          <script src="" async defer></script>
