--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                   </p>
             </div>
             
-            <div id="work-info">
-              <h3>Work</h3>
-              <div class="card flex-row" style="width: 18rem;">
+            <div class= "container" id="work-info">
+              <!-- <h3 id="worktitle">Work</h3> -->
                    <div class="card-body card1">
                      <h5 class="card-title">Scratch Activity</h4>
                      <a href="#" class="card-link card-links">https://scratch.mit.edu/projects/474156972</a>
@@ -61,10 +60,17 @@
                     <a href="#" class="card-link card-links"> https://markhatthorinc.github.io/gt-bootcamp-project01-team_Genesis/</a>
                   </div>
                   <div class="card-body card4">
-                    <h5 class="card-title">Card title</h4>
-                    <a href="#" class="card-link card-links">Card link</a>
+                    <h5 class="card-title">E-commerce-back-End-</h4>
+                    <a href="#" class="card-link card-links">https://github.com/ojg93/E-commerce-back-End-</a>
                   </div>
-              </div>
+                  <div class="card-body card5">
+                    <h5 class="card-title">Trader Jocks</h4>
+                    <a href="#" class="card-link card-links">https://github.com/figfacts/gt-bootcamp-project02-Team_Genesis</a>
+                  </div>
+                  <div class="card-body card6">
+                    <h5 class="card-title">Trader Jocks</h4>
+                    <a href="#" class="card-link card-links">https://github.com/ojg93/Node-Employee-Generator</a>
+                  </div>
           </div>
 
             <div id="contact-me-info" class="container footer">
